# active-learning-orchestrator

./: .gitattributes  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  WALKTHROUGH_RU.md  active_learning_lab.ipynb  pyproject.toml
.agents/: README.md
.agents/tasks/: 2026-04-18-agent-freshness-rules-plan.md  2026-04-20-ts-datasets-eval-plan.md  2026-04-24-optimization-cycle-plan.md  2026-04-24-r01-strategy-scheduler-audit.md  2026-04-24-r02-engine-loop-audit.md  2026-04-24-r03-benchmark-metrics-audit.md  2026-04-24-r04-baseline-dataset-model-design.md  2026-04-24-r05-review-engine-round-budget-fix.md  2026-04-24-r06-review-learning-curve-runner.md  2026-04-24-r07-review-engine-fix-round.md  2026-04-24-r08-review-learning-curve-fix-round.md  2026-04-24-r09-final-engine-recheck.md  2026-04-24-r10-baseline-stability-hypotheses.md  2026-04-24-r11-review-baseline-sweep-runner.md  2026-04-24-r12-existing-strategy-optimization-map.md  2026-04-24-r13-review-fixed-dataset-sweep.md  2026-04-24-r14-review-dataset-seed-summary-fix.md  2026-04-24-r15-review-acquisition-diagnostics.md  2026-04-24-r16-review-diagnostics-validation-fix.md  2026-04-24-r17-review-warm-start-sweep.md  2026-04-24-r18-final-system-review-research-cycle.md  2026-04-24-r19-quality-improvement-hypotheses.md  2026-04-24-r20-review-sdk-strategy-correctness.md  2026-04-24-r21-review-pcb-sweep.md  2026-04-24-r22-review-mix-scheduler-exclusion.md  2026-04-24-r23-review-temperature-smoothing.md  2026-04-24-r24-review-tie-jitter.md  2026-04-24-r25-final-optimization-cycle-review.md  2026-04-24-r26-design-new-sdk-first-benchmarks.md  2026-04-24-r27-review-old-evaluation-removal.md  2026-04-24-r28-review-new-benchmark-harness.md  2026-04-24-r29-review-benchmark-fixes.md  2026-04-24-r30-review-opaque-benchmark-ids.md  2026-04-24-r31-final-benchmark-harness-review.md  2026-04-24-r32-review-import-labels-api.md  2026-04-24-r33-review-full-project-smoke.md  2026-04-24-r34-review-seed-train-before-select.md  2026-04-24-r35-review-seed-train-resume-fix.md  2026-04-24-r36-final-seed-train-review.md  2026-04-24-r37-review-project-smoke-no-warmstart.md  (+420 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark_question.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: README.md  manual_strategy_benchmark.py  native_external_benchmark.py  quality_gate_report.py  reference_strategy_benchmark.py  sdk_first_benchmark.py
benchmarks/results/: current_benchmark_report.md
benchmarks/results/stage2_smoke_current/: full_train_reference.csv  manifest.json  metrics.csv  quality_gate.json  quality_gate.md  selections.csv  stop_policies.csv  summary.json  summary.md  validation.json
benchmarks/results/stage9_final/: manifest.json  metrics.csv  selections.csv  stop_policies.csv  summary.json  summary.md  validation.json
benchmarks/results/stage9_reference/: equivalence.csv  external_adapters.json  manifest.json  metrics.csv  selections.csv  summary.json  summary.md  validation.json
codebase_guides/: CALLFLOW_TRACE_RU.md  MVP_GUIDE_RU.md  WALKTHROUGH_RU.md
docker/label_studio/: README.md  docker-compose.yml  nginx.conf
docs/: BENCHMARK_EVIDENCE.md  LABEL_STUDIO_LIVE_TESTS.md  PRD_Phase1_SDK.docx  PRD_Phase2_Infra.docx  README.md  SDK_CONTRACTS.md  architecture.puml
lab/: active_learning_lab.ipynb  experiment_runs.csv
plans/: 2026-04-18-agent-claude-sync-plan.md  2026-04-18-notebook-function-docs-plan.md  2026-04-18-notebook-implementation-plan.md  2026-04-18-pytorch-cuda-uv-plan.md  2026-04-18-uv-locking-plan.md  2026-04-19-baseline-params-plan.md  2026-04-19-lab-temperature-scaling-plan.md  2026-04-19-notebook-finalization-plan.md  2026-04-20-vector-temperature-scaling-plan.md
src/active_learning_core/: __init__.py  configs.py  engine.py  report.py  types.py
src/active_learning_core/backends/: __init__.py  (+1 more)
src/active_learning_sdk/: __init__.py  annotation.py  cache.py  configs.py  engine.py  exceptions.py  project.py  report.py  types.py  utils.py
tests/: conftest.py  test_adapter_config_contracts.py  test_adaptive_strategy.py  test_annotation_timeouts.py  test_backend_contract_regressions.py  test_backend_operations_hardening.py  test_badge_strategy.py  test_benchmark_comparison_regressions.py  test_benchmark_evidence_contract.py  test_blackbox_regressions.py  test_cache_stats_semantics.py  test_class_balanced_entropy_strategy.py  test_class_group_balanced_entropy_strategy.py  test_core.py  test_core_refactor_characterization.py  test_embedding_strategies.py  test_event_artifacts.py  test_exception_taxonomy.py  test_group_diverse_strategy.py  test_huggingface_adapter.py  test_hybrid_strategy_framework.py  test_import_labels.py  test_known_defect_regressions.py  test_label_backends.py  test_live_label_studio_integration.py  test_managed_label_studio.py  test_mix_interleaved_scheduler.py  test_native_external_benchmark.py  test_nonengine_contracts.py  test_open_defect_regressions.py  test_optional_dependency_packaging.py  test_project_smoke_benchmark.py  test_public_api_contract_regressions.py  test_public_api_packaging_regressions.py  test_public_beta_docs_package_coherence.py  test_public_contract_acceptance.py  test_public_contracts.py  test_quality_gate_report.py  test_reference_strategy_benchmark.py  test_release_acceptance_blockers.py  (+22 more)
(+64 files in other folders)
