[project]
name = "active-learning-orchestrator-lab"
version = "0.1.0"
description = "Notebook runtime dependencies for the active learning experiment lab."
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets==4.8.4",
    "ipykernel==7.2.0",
    "nbclient==0.10.4",
    "nbformat==5.10.4",
    "pandas==3.0.2",
    "protobuf==7.34.1",
    "scikit-learn==1.8.0",
    "sentencepiece==0.2.1",
    "torch==2.11.0",
    "transformers==5.5.4",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "faiss-gpu==1.7.2",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pac-bayes-bounds==1.0.0",
    "onnxruntime-gpu==1.17.0",
]

[tool.uv]
package = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
